# portability_test

./: .gitignore  CMakeLists.txt  build.gradle  local.properties  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/: CoreWrapper.java  MainActivity.java  MainActivity.kt
app/src/main/java/com/example/myapplication/: MainActivity.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
src/: main.cpp  main.h
